--- a/.gitignore
+++ b/.gitignore
@@ -22,8 +22,7 @@ composer.lock
 src/config.php
 
 # Uploads (keep structure but ignore content)
-uploads/products/*
-!uploads/products/.gitkeep
+uploads/
 public/uploads/products/*
 !public/uploads/products/.gitkeep
 
@@ -31,6 +30,8 @@ public/uploads/products/*
 *.log
 error_log
 logs/
+logs/*
+!logs/.gitkeep
 *.tmp
 
 # Cache and sessions
@@ -42,10 +43,12 @@ sessions/
 .env
 .env.local
 .env.production
+.env.*
 
-# Database backups
+# Database backups and exports
 *.sql.backup
 *.db.backup
+*.dump
 
 # Development and testing files
 test-*.php
@@ -54,8 +57,33 @@ fix-*.php
 setup-*.php
 check-*.php
 diagnose-*.php
+temp-*.php
 
 # Documentation drafts (keep main docs)
 *_TEMP.md
 *_DRAFT.md
 *_BACKUP.md
+
+# Runtime data
+pids
+*.pid
+*.seed
+*.pid.lock
+
+# Coverage directory used by tools like istanbul
+coverage/
+
+# Dependency directories
+node_modules/
+
+# Optional npm cache directory
+.npm
+
+# Optional REPL history
+.node_repl_history
+
+# Output of 'npm pack'
+*.tgz
+
+# Yarn Integrity file
+.yarn-integrity
